tests/errors/read_error_02.f90
program read_error_02
    implicit none
    real(8) :: d
    read *, d
end program read_error_02
